# actix-session-auth-example

./: Cargo.toml
src/: app.rs  auth_service.rs  main.rs  model.rs
src/api/: handlers.rs  types.rs
src/db/: in_memory.rs  mod.rs
