[package]
name = "actix-auth-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "1.0.38"
tracing-actix-web = "0.7.2"
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }
time = { version = "0.3.20", features = ["serde", "serde-well-known"] }
async-mutex = "1.4.0"
